Modbus server responds to random data pool

--- a/configure.ac
+++ b/configure.ac
@@ -20,6 +20,7 @@ AC_SEARCH_LIBS([pthread_create], [pthread], [],
 AC_CONFIG_FILES([
     Makefile
     scripts/Makefile
+    common/Makefile
     src/Makefile
 ])
 
